--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Appcellent - Crafting Premium iOS Experiences</title>
-    <meta name="description" content="Appcellent creates high-quality, intuitive iOS applications that enhance your daily life.">
+    <meta name="description"
+        content="Appcellent creates high-quality, intuitive iOS applications that enhance your daily life.">
     <link rel="stylesheet" href="styles/main.css">
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🍎</text></svg>">
+    <link rel="icon"
+        href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🍎</text></svg>">
 </head>
+
 <body>
 
     <header>
@@ -34,7 +38,8 @@
 
         <section id="apps" class="section">
             <div class="container">
-                <h2 style="text-align: center; margin-bottom: 48px; font-size: 40px; font-weight: 600;">Our Creations</h2>
+                <h2 style="text-align: center; margin-bottom: 48px; font-size: 40px; font-weight: 600;">Our Creations
+                </h2>
                 <div class="grid">
                     <!-- Placeholder for App 1 -->
                     <div class="card">
@@ -43,8 +48,8 @@
                     </div>
                     <!-- Placeholder for App 2 -->
                     <div class="card">
-                        <h3>Level Tool</h3>
-                        <p>Precision leveling for all your DIY projects. Calibrated for accuracy.</p>
+                        <h3>Coming Soon</h3>
+                        <p>We are constantly working on new ideas to bring to the App Store.</p>
                     </div>
                     <!-- Placeholder for App 3 -->
                     <div class="card">
@@ -59,7 +64,8 @@
             <div class="container" style="text-align: center;">
                 <h2 style="margin-bottom: 24px;">Designed for Apple Platforms</h2>
                 <p style="color: var(--text-secondary); max-width: 700px; margin: 0 auto;">
-                    We leverage the latest technologies like SwiftUI, ARKit, and CoreML to deliver native experiences that feel right at home on your iPhone and iPad.
+                    We leverage the latest technologies like SwiftUI, ARKit, and CoreML to deliver native experiences
+                    that feel right at home on your iPhone and iPad.
                 </p>
             </div>
         </section>
@@ -82,7 +88,7 @@
                     <h4>Legal</h4>
                     <ul>
                         <li><a href="privacy.html">Privacy Policy</a></li>
-                        <li><a href="#">Terms of Service</a></li>
+                        <li><a href="terms.html">Terms of Service</a></li>
                     </ul>
                 </div>
                 <div class="footer-links">
@@ -94,11 +100,12 @@
                 </div>
             </div>
             <div class="copyright">
-                &copy; 2024 Appcellent. All rights reserved.
+                &copy; 2025 Appcellent. All rights reserved.
             </div>
         </div>
     </footer>
 
     <script src="scripts/app.js"></script>
 </body>
+
 </html>
