--- a/privacy.html
+++ b/privacy.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Policy - Appcellent</title>
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="icon"
+        href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🍎</text></svg>">
 </head>
 
 <body>
@@ -26,51 +28,144 @@
     <main class="container section" style="padding-top: 120px;">
         <h1 style="margin-bottom: 32px;">Privacy Policy</h1>
         <div style="color: var(--text-secondary); line-height: 1.8; max-width: 800px;">
-            <p style="margin-bottom: 24px;">Last updated: December 07, 2024</p>
+            <p style="margin-bottom: 24px;">Last updated: December 07, 2025</p>
 
-            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">1. Introduction</h2>
             <p>
-                At Appcellent ("we," "our," or "us"), we respect your privacy and are committed to protecting it through
-                our compliance with this policy.
-                This policy describes the types of information we may collect from you or that you may provide when you
-                visit our website or use our mobile applications.
+                Your privacy and protection of your personal data is important to us. As Appcellent Yazılım Hizmetleri
+                Anonim Şirketi ("Appcellent"), we would like to inform you about your personal data processed within the
+                scope of your visit and use of appcellent.co and our mobile applications, the data security measures we
+                take and your rights as of Personal Data Protection Law No. 6698.
             </p>
 
-            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">2. Information We Collect
+            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">1. How do we collect
+                information?</h2>
+            <p>
+                Your personal data is collected as part of your visit to our website, use of our mobile applications,
+                and contacting us through the contact section.
+            </p>
+
+            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">2. Which information do we
+                collect?</h2>
+            <p>
+                As part of your visit to our website, we collect your IP address, device information, visit time, log
+                records and cookies required for the functionality of the website.
+            </p>
+            <p style="margin-top: 12px;">
+                When you use our mobile applications, we may collect anonymous usage statistics and device information
+                (such as device type and operating system version) for diagnostics and to improve our services.
+            </p>
+            <p style="margin-top: 12px;">
+                If you contact us from the "Contact" field or via email, your name, e-mail address and requests will be
+                collected.
+            </p>
+
+            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">3. For what purposes do we
+                collect information?</h2>
+            <p>
+                We collect the personal data during your website visits stated above for the purpose of ensuring the
+                technical functionality of the website, demonstrating our corporate structure and products, and
+                fulfilling legal obligations arising from regulations such as the Internet Law No. 5651.
+            </p>
+            <p style="margin-top: 12px;">
+                We process the collected information in the "Contact" field in order to communicate with you, learn
+                about your requests and complaints and respond to them within a reasonable time.
+            </p>
+            <p style="margin-top: 12px;">
+                We process data from our mobile applications to provide, operate, and maintain our applications, and to
+                improve and personalize your experience.
+            </p>
+            <p style="margin-top: 12px;">
+                Appcellent processes your personal data listed above only for these listed purposes by adopting the
+                principles of data minimization and purpose limitation.
+            </p>
+
+            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">4. Scope of this Policy</h2>
+            <p>
+                This privacy policy applies to the appcellent.co website and all mobile applications published by
+                Appcellent.
+            </p>
+
+            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">5. Do we transfer your data?
             </h2>
             <p>
-                Our applications are designed to minimize data collection. We generally do not collect personal
-                information unless you voluntarily provide it to us (e.g., through support requests).
+                We do not sell, trade, or otherwise transfer your personally identifiable information to any third
+                parties; except third-party service providers in the operation of this website and our apps, legal and
+                financial advisors, public institutions and authorities legally authorized to request personal data.
+            </p>
+
+            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">6. Use of cookies</h2>
+            <p>
+                Cookies are small data files received when you visit our website via your electronic device. You can
+                change your cookie settings at any time via your browser. Technical/functional cookies are used
+                primarily to enhance the functionality and performance of the website. We would like to inform you that
+                we use the cookies stated below:
             </p>
             <ul style="list-style: disc; margin-left: 24px; margin-top: 16px;">
-                <li><strong>Usage Data:</strong> We may collect anonymous usage statistics to help us improve our apps.
-                </li>
-                <li><strong>Device Data:</strong> Information such as device type and operating system version may be
-                    collected for diagnostics.</li>
+                <li><strong>Session cookies</strong> are collected temporarily and deleted once the user closes their
+                    browser. They help maintain the user session while navigating the website.</li>
+                <li><strong>Persistent cookies</strong> remain on the user’s device for a specified period or until
+                    deleted. They are used to remember user preferences and settings for future visits.</li>
             </ul>
 
-            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">3. How We Use Your
-                Information</h2>
+            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">7. Which data security
+                measures do we take?</h2>
             <p>
-                We use the information we collect to:
+                As Appcellent, we take care to process your personal data only for its purpose and to implement
+                reasonable administrative and technical data security measures prescribed by the relevant legislation.
+                We destroy or continue to use your personal data by anonymizing them after the legal retention period or
+                the purpose of processing expires. We would like to emphasize that since it is not possible to guarantee
+                100% security of the electronic devices and intermediaries you use as you access this website, you are
+                kindly invited to use safe networks and take technical security measures for your device.
+            </p>
+
+            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">8. Third party links</h2>
+            <p>
+                There may be third party links, promotions and advertisements on the website. Before clicking on these
+                links, it is recommended to check their reliability and to review the privacy policies of these links.
+            </p>
+
+            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">9. Your rights</h2>
+            <p>
+                In accordance with Article 11 of the Personal Data Protection Law No. 6698, you have the following
+                rights:
             </p>
             <ul style="list-style: disc; margin-left: 24px; margin-top: 16px;">
-                <li>Provide, operate, and maintain our applications.</li>
-                <li>Improve, personalize, and expand our services.</li>
-                <li>Understand and analyze how you use our apps.</li>
+                <li>check if your personal data is being processed.</li>
+                <li>request details about the processing of your personal data.</li>
+                <li>understand the purpose of data processing and ensure it is used correctly.</li>
+                <li>know which third parties receive personal data domestically or internationally.</li>
+                <li>ask for corrections to any incomplete or inaccurate data.</li>
+                <li>request the deletion or destruction of your personal data as per Article 7.</li>
+                <li>ask for notification of any actions taken regarding the correction or deletion of your data to third
+                    parties.</li>
+                <li>object to automated processing of your personal data that is negatively impacting.</li>
+                <li>seek compensation for damages from unlawful processing of your personal data.</li>
             </ul>
-
-            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">4. Data Security</h2>
-            <p>
-                We have implemented measures designed to secure your personal information from accidental loss and from
-                unauthorized access, use, alteration, and disclosure.
+            <p style="margin-top: 16px;">
+                To exercise your rights above, you may send a petition or e-mail to the address in the contact details.
+                In your submissions, please make sure that your contact information is correct and up-to-date.
+                Appcellent will respond within the legal period of 30 days.
             </p>
 
-            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">5. Contact Us</h2>
+            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">10. Updates to this policy
+            </h2>
             <p>
-                If you have any questions about this Privacy Policy, please contact us at: <a
-                    href="mailto:contact@appcellent.co" style="color: var(--accent-color);">contact@appcellent.co</a>
+                Since we may update this Privacy Policy from time to time, we encourage you to review this policy
+                periodically for any updates.
             </p>
+
+            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">11. Contact Us</h2>
+            <p>
+                You can contact us using the information below and submit your questions:
+            </p>
+            <div
+                style="margin-top: 16px; background: var(--bg-secondary); padding: 24px; border-radius: 12px; border: 1px solid var(--glass-border);">
+                <p><strong>Company:</strong> Appcellent Yazılım Hizmetleri Anonim Şirketi</p>
+                <p><strong>Address:</strong> CUMHURİYET MAH. FATİH SULTAN MEHMET BUL. CADDE 224 SİTESİ A BLOK NO: 41A/A
+                    NİLÜFER / BURSA</p>
+                <p><strong>E-mail:</strong> <a href="mailto:contact@appcellent.co"
+                        style="color: var(--accent-color);">contact@appcellent.co</a></p>
+            </div>
         </div>
     </main>
 
@@ -91,7 +186,7 @@
                     <h4>Legal</h4>
                     <ul>
                         <li><a href="privacy.html">Privacy Policy</a></li>
-                        <li><a href="#">Terms of Service</a></li>
+                        <li><a href="terms.html">Terms of Service</a></li>
                     </ul>
                 </div>
                 <div class="footer-links">
@@ -103,7 +198,7 @@
                 </div>
             </div>
             <div class="copyright">
-                &copy; 2024 Appcellent. All rights reserved.
+                &copy; 2025 Appcellent. All rights reserved.
             </div>
         </div>
     </footer>
