--- a/terms.html
+++ b/terms.html
@@ -32,8 +32,10 @@
 
             <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">1. Acceptance of Terms</h2>
             <p>
-                By accessing and using the website and mobile applications provided by Appcellent ("we," "our," or
-                "us"), you accept and agree to be bound by the terms and provision of this agreement.
+                By accessing and using the website (appcellent.co) and mobile applications provided by Appcellent
+                Yazılım Hizmetleri Anonim Şirketi ("Appcellent," "we," "our," or "us"), you accept and agree to be bound
+                by the terms and provision of this agreement. If you do not agree with any of these terms, you are
+                prohibited from using or accessing this site and our applications.
             </p>
 
             <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">2. Use License</h2>
@@ -54,6 +56,12 @@
                 <li>Remove any copyright or other proprietary notations from the materials; or</li>
                 <li>Transfer the materials to another person or "mirror" the materials on any other server.</li>
             </ul>
+            <p style="margin-top: 16px;">
+                This license shall automatically terminate if you violate any of these restrictions and may be
+                terminated by Appcellent at any time. Upon terminating your viewing of these materials or upon the
+                termination of this license, you must destroy any downloaded materials in your possession whether in
+                electronic or printed format.
+            </p>
 
             <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">3. Disclaimer</h2>
             <p>
@@ -62,25 +70,60 @@
                 including, without limitation, implied warranties or conditions of merchantability, fitness for a
                 particular purpose, or non-infringement of intellectual property or other violation of rights.
             </p>
+            <p style="margin-top: 12px;">
+                Further, Appcellent does not warrant or make any representations concerning the accuracy, likely
+                results, or reliability of the use of the materials on its website or otherwise relating to such
+                materials or on any sites linked to this site.
+            </p>
 
             <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">4. Limitations</h2>
             <p>
                 In no event shall Appcellent or its suppliers be liable for any damages (including, without limitation,
                 damages for loss of data or profit, or due to business interruption) arising out of the use or inability
-                to use the materials on Appcellent's website or applications.
+                to use the materials on Appcellent's website or applications, even if Appcellent or an Appcellent
+                authorized representative has been notified orally or in writing of the possibility of such damage.
             </p>
 
-            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">5. Governing Law</h2>
+            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">5. Accuracy of Materials</h2>
             <p>
-                These terms and conditions are governed by and construed in accordance with the laws and you irrevocably
-                submit to the exclusive jurisdiction of the courts in that location.
+                The materials appearing on Appcellent's website and applications could include technical, typographical,
+                or photographic errors. Appcellent does not warrant that any of the materials on its website are
+                accurate, complete or current. Appcellent may make changes to the materials contained on its website at
+                any time without notice. However, Appcellent does not make any commitment to update the materials.
             </p>
 
-            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">6. Contact Us</h2>
+            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">6. Links</h2>
             <p>
-                If you have any questions about these Terms of Service, please contact us at: <a
-                    href="mailto:contact@appcellent.co" style="color: var(--accent-color);">contact@appcellent.co</a>
+                Appcellent has not reviewed all of the sites linked to its website and is not responsible for the
+                contents of any such linked site. The inclusion of any link does not imply endorsement by Appcellent of
+                the site. Use of any such linked website is at the user's own risk.
             </p>
+
+            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">7. Modifications</h2>
+            <p>
+                Appcellent may revise these terms of service for its website and applications at any time without
+                notice. By using this website and our applications you are agreeing to be bound by the then current
+                version of these terms of service.
+            </p>
+
+            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">8. Governing Law</h2>
+            <p>
+                These terms and conditions are governed by and construed in accordance with the laws of Turkey and you
+                irrevocably submit to the exclusive jurisdiction of the courts in that location.
+            </p>
+
+            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">9. Contact Us</h2>
+            <p>
+                If you have any questions about these Terms of Service, please contact us at:
+            </p>
+            <div
+                style="margin-top: 16px; background: var(--bg-secondary); padding: 24px; border-radius: 12px; border: 1px solid var(--glass-border);">
+                <p><strong>Company:</strong> Appcellent Yazılım Hizmetleri Anonim Şirketi</p>
+                <p><strong>Address:</strong> CUMHURİYET MAH. FATİH SULTAN MEHMET BUL. CADDE 224 SİTESİ A BLOK NO: 41A/A
+                    NİLÜFER / BURSA</p>
+                <p><strong>E-mail:</strong> <a href="mailto:contact@appcellent.co"
+                        style="color: var(--accent-color);">contact@appcellent.co</a></p>
+            </div>
         </div>
     </main>
 
