--- a/privacy.html
+++ b/privacy.html
@@ -15,11 +15,11 @@
     <header>
         <div class="container">
             <nav>
-                <a href="index.html" class="logo">Appcellent</a>
+                <a href="/" class="logo">Appcellent</a>
                 <div class="nav-links">
-                    <a href="index.html#apps">Apps</a>
-                    <a href="support.html">Support</a>
-                    <a href="privacy.html">Privacy</a>
+                    <a href="/#apps">Apps</a>
+                    <a href="support">Support</a>
+                    <a href="privacy">Privacy</a>
                 </div>
             </nav>
         </div>
@@ -178,21 +178,21 @@
                 <div class="footer-links">
                     <h4>Company</h4>
                     <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="index.html#apps">Apps</a></li>
+                        <li><a href="/">Home</a></li>
+                        <li><a href="/#apps">Apps</a></li>
                     </ul>
                 </div>
                 <div class="footer-links">
                     <h4>Legal</h4>
                     <ul>
-                        <li><a href="privacy.html">Privacy Policy</a></li>
-                        <li><a href="terms.html">Terms of Service</a></li>
+                        <li><a href="privacy">Privacy Policy</a></li>
+                        <li><a href="terms">Terms of Service</a></li>
                     </ul>
                 </div>
                 <div class="footer-links">
                     <h4>Connect</h4>
                     <ul>
-                        <li><a href="support.html">Support</a></li>
+                        <li><a href="support">Support</a></li>
                         <li><a href="mailto:contact@appcellent.co">contact@appcellent.co</a></li>
                     </ul>
                 </div>
