--- a/privacy.html
+++ b/privacy.html
@@ -31,132 +31,143 @@
             <p style="margin-bottom: 24px;">Last updated: December 07, 2025</p>
 
             <p>
-                Your privacy and protection of your personal data is important to us. As Appcellent Yazılım Hizmetleri
-                Anonim Şirketi ("Appcellent"), we would like to inform you about your personal data processed within the
-                scope of your visit and use of appcellent.co and our mobile applications, the data security measures we
-                take and your rights as of Personal Data Protection Law No. 6698.
-            </p>
-
-            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">1. How do we collect
-                information?</h2>
-            <p>
-                Your personal data is collected as part of your visit to our website, use of our mobile applications,
-                and contacting us through the contact section.
-            </p>
-
-            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">2. Which information do we
-                collect?</h2>
-            <p>
-                As part of your visit to our website, we collect your IP address, device information, visit time, log
-                records and cookies required for the functionality of the website.
+                This Privacy Policy explains how Appcellent Yazılım Hizmetleri Anonim Şirketi ("Appcellent", "we", "us",
+                or "our") collects, uses, and protects your information when you use our website (appcellent.co) and our
+                mobile applications (collectively, the "Service"). By strictly adhering to the Personal Data Protection
+                Law No. 6698 and other relevant regulations, we are committed to safeguarding your privacy.
             </p>
             <p style="margin-top: 12px;">
-                When you use our mobile applications, we may collect anonymous usage statistics and device information
-                (such as device type and operating system version) for diagnostics and to improve our services.
-            </p>
-            <p style="margin-top: 12px;">
-                If you contact us from the "Contact" field or via email, your name, e-mail address and requests will be
-                collected.
+                By using our Service, you agree to the collection and use of information in accordance with this policy.
+                If you do not agree with these terms, please discontinue use of the Service immediately.
             </p>
 
-            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">3. For what purposes do we
-                collect information?</h2>
-            <p>
-                We collect the personal data during your website visits stated above for the purpose of ensuring the
-                technical functionality of the website, demonstrating our corporate structure and products, and
-                fulfilling legal obligations arising from regulations such as the Internet Law No. 5651.
-            </p>
-            <p style="margin-top: 12px;">
-                We process the collected information in the "Contact" field in order to communicate with you, learn
-                about your requests and complaints and respond to them within a reasonable time.
-            </p>
-            <p style="margin-top: 12px;">
-                We process data from our mobile applications to provide, operate, and maintain our applications, and to
-                improve and personalize your experience.
-            </p>
-            <p style="margin-top: 12px;">
-                Appcellent processes your personal data listed above only for these listed purposes by adopting the
-                principles of data minimization and purpose limitation.
-            </p>
-
-            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">4. Scope of this Policy</h2>
-            <p>
-                This privacy policy applies to the appcellent.co website and all mobile applications published by
-                Appcellent.
-            </p>
-
-            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">5. Do we transfer your data?
+            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">1. Information We Collect
             </h2>
             <p>
-                We do not sell, trade, or otherwise transfer your personally identifiable information to any third
-                parties; except third-party service providers in the operation of this website and our apps, legal and
-                financial advisors, public institutions and authorities legally authorized to request personal data.
+                We collect various types of information to provide and improve our Service to you. This includes:
             </p>
 
-            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">6. Use of cookies</h2>
+            <h3
+                style="color: var(--text-primary); font-size: 1.1em; margin-top: 24px; margin-bottom: 12px; font-weight: 600;">
+                A. Information You Provide</h3>
             <p>
-                Cookies are small data files received when you visit our website via your electronic device. You can
-                change your cookie settings at any time via your browser. Technical/functional cookies are used
-                primarily to enhance the functionality and performance of the website. We would like to inform you that
-                we use the cookies stated below:
+                <strong>Registration Information:</strong> When you register for our Service, we may collect personal
+                details such as your name, email address, city, gender, and profile information.
+            </p>
+            <p style="margin-top: 8px;">
+                <strong>User Content:</strong> Any photos, videos, text messages, or other content you create, upload,
+                or share through the Service. Please be aware that if you voluntarily disclose personal information in
+                public areas of the Service, that information can be viewed and used by others.
+            </p>
+            <p style="margin-top: 8px;">
+                <strong>Contact List:</strong> With your explicit consent, we may access your device's address book to
+                help you connect with friends on the Service. We only access the specific contact fields (names,
+                numbers, emails) needed for this purpose.
+            </p>
+
+            <h3
+                style="color: var(--text-primary); font-size: 1.1em; margin-top: 24px; margin-bottom: 12px; font-weight: 600;">
+                B. Automatically Collected Information</h3>
+            <p>
+                <strong>Usage Data:</strong> We collect information about how you interact with our Service, including
+                crash logs, diagnostic data, session duration, and feature usage.
+            </p>
+            <p style="margin-top: 8px;">
+                <strong>Device Information:</strong> We may collect data about your mobile device, including the
+                device model, operating system version, unique device identifiers, and network information.
+            </p>
+
+            <h3
+                style="color: var(--text-primary); font-size: 1.1em; margin-top: 24px; margin-bottom: 12px; font-weight: 600;">
+                C. Facial Data & AI Features</h3>
+            <p>
+                For applications offering AI-powered photo editing or analysis, we may process facial data. This data is
+                primarily processed locally on your device. If server-side processing is required, your facial data is
+                used solely for the purpose of generating the requested output and is <strong>permanently
+                    purged</strong>
+                from our servers shortly after processing (typically within 30 days). We do not use this data for user
+                identification
+                outside the context of the app's features, nor do we sell it to third parties.
+            </p>
+
+            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">2. How We Use Your
+                Information</h2>
+            <p>
+                We use the collected data for the following purposes:
             </p>
             <ul style="list-style: disc; margin-left: 24px; margin-top: 16px;">
-                <li><strong>Session cookies</strong> are collected temporarily and deleted once the user closes their
-                    browser. They help maintain the user session while navigating the website.</li>
-                <li><strong>Persistent cookies</strong> remain on the user’s device for a specified period or until
-                    deleted. They are used to remember user preferences and settings for future visits.</li>
+                <li>To provide, operate, and maintain our Service;</li>
+                <li>To verify your identity and manage your account;</li>
+                <li>To improve our AI models and algorithms (using anonymized data only);</li>
+                <li>To detect, prevent, and address technical issues or fraudulent activity;</li>
+                <li>To communicate with you regarding updates, security alerts, and support messages;</li>
+                <li>To fulfill legal obligations and enforce our Terms of Service.</li>
             </ul>
 
-            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">7. Which data security
-                measures do we take?</h2>
+            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">3. Data Sharing and
+                Disclosure</h2>
             <p>
-                As Appcellent, we take care to process your personal data only for its purpose and to implement
-                reasonable administrative and technical data security measures prescribed by the relevant legislation.
-                We destroy or continue to use your personal data by anonymizing them after the legal retention period or
-                the purpose of processing expires. We would like to emphasize that since it is not possible to guarantee
-                100% security of the electronic devices and intermediaries you use as you access this website, you are
-                kindly invited to use safe networks and take technical security measures for your device.
-            </p>
-
-            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">8. Third party links</h2>
-            <p>
-                There may be third party links, promotions and advertisements on the website. Before clicking on these
-                links, it is recommended to check their reliability and to review the privacy policies of these links.
-            </p>
-
-            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">9. Your rights</h2>
-            <p>
-                In accordance with Article 11 of the Personal Data Protection Law No. 6698, you have the following
-                rights:
+                We respect your trust and do not sell your personal information. We may share your data only in the
+                following circumstances:
             </p>
             <ul style="list-style: disc; margin-left: 24px; margin-top: 16px;">
-                <li>check if your personal data is being processed.</li>
-                <li>request details about the processing of your personal data.</li>
-                <li>understand the purpose of data processing and ensure it is used correctly.</li>
-                <li>know which third parties receive personal data domestically or internationally.</li>
-                <li>ask for corrections to any incomplete or inaccurate data.</li>
-                <li>request the deletion or destruction of your personal data as per Article 7.</li>
-                <li>ask for notification of any actions taken regarding the correction or deletion of your data to third
-                    parties.</li>
-                <li>object to automated processing of your personal data that is negatively impacting.</li>
-                <li>seek compensation for damages from unlawful processing of your personal data.</li>
+                <li><strong>Service Providers:</strong> We employ third-party companies (e.g., cloud hosting, analytics,
+                    email delivery) to facilitate our Service. These third parties have access to your data only to
+                    perform specific tasks on our behalf and are obligated not to disclose or use it for any other
+                    purpose.</li>
+                <li><strong>Legal Requirements:</strong> We may disclose your data if required to do so by law or in
+                    response to valid requests by public authorities.</li>
+                <li><strong>Business Transfers:</strong> In connection with any merger, sale of company assets, or
+                    acquisition, your data may be transferred as a business asset.</li>
             </ul>
-            <p style="margin-top: 16px;">
-                To exercise your rights above, you may send a petition or e-mail to the address in the contact details.
-                In your submissions, please make sure that your contact information is correct and up-to-date.
-                Appcellent will respond within the legal period of 30 days.
-            </p>
 
-            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">10. Updates to this policy
+            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">4. Data Retention and
+                Security
             </h2>
             <p>
-                Since we may update this Privacy Policy from time to time, we encourage you to review this policy
-                periodically for any updates.
+                We retain your personal data only as long as necessary to fulfill the purposes set out in this policy.
+                You
+                can request the deletion of your account and associated data at any time.
+            </p>
+            <p style="margin-top: 12px;">
+                We implement industry-standard security measures to protect your information. However, no method of
+                transmission over the Internet or electronic storage is 100% secure, and we cannot guarantee absolute
+                security.
             </p>
 
-            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">11. Contact Us</h2>
+            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">5. Children's Privacy</h2>
             <p>
-                You can contact us using the information below and submit your questions:
+                Our Service is not directed to individuals under the age of 13. We do not knowingly collect personal
+                data from children under 13. If we become aware that we have collected such data without parental
+                consent, we will take steps to remove that information from our servers.
+            </p>
+
+            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">6. Your Rights</h2>
+            <p>
+                Under the GDPR and KVKK (Law No. 6698), you have the right to:
+            </p>
+            <ul style="list-style: disc; margin-left: 24px; margin-top: 16px;">
+                <li><strong>Access:</strong> Request copies of your personal data held by us.</li>
+                <li><strong>Rectification:</strong> Request correction of inaccurate or incomplete data.</li>
+                <li><strong>Erasure:</strong> Request the deletion of your personal data ("Right to be forgotten").</li>
+                <li><strong>Restriction:</strong> Request that we restrict the processing of your data.</li>
+                <li><strong>Portability:</strong> Request to transfer your data to another organization.</li>
+                <li><strong>Objection:</strong> Object to our processing of your personal data.</li>
+                <li><strong>Withdraw Consent:</strong> Withdraw your consent at any time where we relied on your consent
+                    to process your information.</li>
+            </ul>
+
+            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">7. Changes to This Policy
+            </h2>
+            <p>
+                We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new
+                Privacy Policy on this page and updating the "Last updated" date. You are advised to review this Privacy
+                Policy periodically for any changes.
+            </p>
+
+            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">8. Contact Us</h2>
+            <p>
+                If you have any questions about this Privacy Policy or wish to exercise your rights, please contact us:
             </p>
             <div
                 style="margin-top: 16px; background: var(--bg-secondary); padding: 24px; border-radius: 12px; border: 1px solid var(--glass-border);">
