--- a/terms.html
+++ b/terms.html
@@ -30,91 +30,104 @@
         <div style="color: var(--text-secondary); line-height: 1.8; max-width: 800px;">
             <p style="margin-bottom: 24px;">Last updated: December 07, 2025</p>
 
-            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">1. Acceptance of Terms</h2>
+            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">1. Agreement to Terms</h2>
             <p>
-                By accessing and using the website (appcellent.co) and mobile applications provided by Appcellent
-                Yazılım Hizmetleri Anonim Şirketi ("Appcellent," "we," "our," or "us"), you accept and agree to be bound
-                by the terms and provision of this agreement. If you do not agree with any of these terms, you are
-                prohibited from using or accessing this site and our applications.
+                These Terms of Service constitute a legally binding agreement made between you, whether personally or on
+                behalf of an entity ("you") and Appcellent Yazılım Hizmetleri Anonim Şirketi ("Appcellent", "we", "us",
+                or "our"), concerning your access to and use of the appcellent.co website as well as any other media
+                form, media channel, mobile website, or mobile application related, linked, or otherwise connected
+                thereto (collectively, the "Site" and "Services").
             </p>
 
-            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">2. Use License</h2>
+            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">2. User Accounts</h2>
             <p>
-                Permission is granted to temporarily download one copy of the materials (information or software) on
-                Appcellent's website and applications for personal, non-commercial transitory viewing only. This is the
-                grant of a license, not a transfer of title.
-            </p>
-            <p style="margin-top: 16px;">
-                Under this license, you may not:
-            </p>
-            <ul style="list-style: disc; margin-left: 24px; margin-top: 16px;">
-                <li>Modify or copy the materials;</li>
-                <li>Use the materials for any commercial purpose, or for any public display (commercial or
-                    non-commercial);</li>
-                <li>Attempt to decompile or reverse engineer any software contained on Appcellent's website or
-                    applications;</li>
-                <li>Remove any copyright or other proprietary notations from the materials; or</li>
-                <li>Transfer the materials to another person or "mirror" the materials on any other server.</li>
-            </ul>
-            <p style="margin-top: 16px;">
-                This license shall automatically terminate if you violate any of these restrictions and may be
-                terminated by Appcellent at any time. Upon terminating your viewing of these materials or upon the
-                termination of this license, you must destroy any downloaded materials in your possession whether in
-                electronic or printed format.
+                You may be required to register with the Site or App to access certain features. You agree to keep your
+                password confidential and will be responsible for all use of your account and password. We reserve the
+                right to remove, reclaim, or change a username you select if we determine, in our sole discretion, that
+                such username is inappropriate, obscene, or otherwise objectionable.
             </p>
 
-            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">3. Disclaimer</h2>
+            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">3. Intellectual Property
+                Rights
+            </h2>
             <p>
-                The materials on Appcellent's website and applications are provided on an 'as is' basis. Appcellent
-                makes no warranties, expressed or implied, and hereby disclaims and negates all other warranties
-                including, without limitation, implied warranties or conditions of merchantability, fitness for a
-                particular purpose, or non-infringement of intellectual property or other violation of rights.
+                Unless otherwise indicated, the Site and Services are our proprietary property and all source code,
+                databases, functionality, software, website designs, audio, video, text, photographs, and graphics on
+                the Site (collectively, the "Content") and the trademarks, service marks, and logos contained therein
+                (the "Marks") are owned or controlled by us or licensed to us, and are protected by copyright and
+                trademark laws.
+            </p>
+
+            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">4. User-Generated Content
+            </h2>
+            <p>
+                Our Services may invite you to chat, contribute to, or participate in blogs, message boards, online
+                forums, and other functionality, and may provide you with the opportunity to create, submit, post,
+                display, transmit, perform, publish, distribute, or broadcast content and materials to us or on the Site
+                (collectively, "User Content").
             </p>
             <p style="margin-top: 12px;">
-                Further, Appcellent does not warrant or make any representations concerning the accuracy, likely
-                results, or reliability of the use of the materials on its website or otherwise relating to such
-                materials or on any sites linked to this site.
+                By posting User Content, you grant us an unrestricted, unlimited, irrevocable, perpetual, non-exclusive,
+                transferable, royalty-free, fully-paid, worldwide right, and license to host, use, copy, reproduce,
+                disclose, sell, resell, publish, broadcast, retitle, archive, store, cache, publicly perform, publicly
+                display, reformat, translate, transmit, excerpt (in whole or in part), and distribute such User Content
+                for any purpose, commercial, advertising, or otherwise.
+            </p>
+            <p style="margin-top: 12px;">
+                You are solely responsible for your User Content and expressely agree not to post content that is
+                illegal, abusive, harassing, defamatory, or otherwise objectionable.
             </p>
 
-            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">4. Limitations</h2>
+            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">5. Prohibited Activities</h2>
             <p>
-                In no event shall Appcellent or its suppliers be liable for any damages (including, without limitation,
-                damages for loss of data or profit, or due to business interruption) arising out of the use or inability
-                to use the materials on Appcellent's website or applications, even if Appcellent or an Appcellent
-                authorized representative has been notified orally or in writing of the possibility of such damage.
+                You may not access or use the Site for any purpose other than that for which we make the Site available.
+                The Site may not be used in connection with any commercial endeavors except those that are specifically
+                endorsed or approved by us. Prohibited activities include, but are not limited to:
+            </p>
+            <ul style="list-style: disc; margin-left: 24px; margin-top: 16px;">
+                <li>Systematically retrieving data or other content from the Site to create or compile, directly or
+                    indirectly, a collection, compilation, database, or directory without written permission from us.
+                </li>
+                <li>Circumventing, disabling, or otherwise interfering with security-related features of the Site.</li>
+                <li>Engaging in unauthorized framing of or linking to the Site.</li>
+                <li>Using the Site in a manner inconsistent with any applicable laws or regulations.</li>
+                <li>Harassing, annoying, intimidating, or threatening any of our employees or agents engaged in
+                    providing any portion of the Site to you.</li>
+            </ul>
+
+            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">6. Disclaimer</h2>
+            <p>
+                The site and services are provided on an "as-is" and "as-available" basis. You agree that your use of
+                the site and our services will be at your sole risk. To the fullest extent permitted by law, we disclaim
+                all warranties, express or implied, in connection with the site and your use thereof.
             </p>
 
-            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">5. Accuracy of Materials</h2>
+            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">7. Limitation of Liability
+            </h2>
             <p>
-                The materials appearing on Appcellent's website and applications could include technical, typographical,
-                or photographic errors. Appcellent does not warrant that any of the materials on its website are
-                accurate, complete or current. Appcellent may make changes to the materials contained on its website at
-                any time without notice. However, Appcellent does not make any commitment to update the materials.
+                In no event will we or our directors, employees, or agents be liable to you or any third party for any
+                direct, indirect, consequential, exemplary, incidental, special, or punitive damages, including lost
+                profit, lost revenue, loss of data, or other damages arising from your use of the site or services.
             </p>
 
-            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">6. Links</h2>
+            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">8. Modifications</h2>
             <p>
-                Appcellent has not reviewed all of the sites linked to its website and is not responsible for the
-                contents of any such linked site. The inclusion of any link does not imply endorsement by Appcellent of
-                the site. Use of any such linked website is at the user's own risk.
+                We reserve the right, in our sole discretion, to make changes or modifications to these Terms of Service
+                at any time and for any reason. We will alert you about any changes by updating the "Last updated" date
+                of these Terms of Service.
             </p>
 
-            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">7. Modifications</h2>
+            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">9. Governing Law</h2>
             <p>
-                Appcellent may revise these terms of service for its website and applications at any time without
-                notice. By using this website and our applications you are agreeing to be bound by the then current
-                version of these terms of service.
+                These Terms shall be governed by and defined following the laws of Turkey. Appcellent Yazılım Hizmetleri
+                Anonim Şirketi and yourself irrevocably consent that the courts of Turkey shall have exclusive
+                jurisdiction to resolve any dispute which may arise in connection with these terms.
             </p>
 
-            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">8. Governing Law</h2>
+            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">10. Contact Us</h2>
             <p>
-                These terms and conditions are governed by and construed in accordance with the laws of Turkey and you
-                irrevocably submit to the exclusive jurisdiction of the courts in that location.
-            </p>
-
-            <h2 style="color: var(--text-primary); margin-top: 32px; margin-bottom: 16px;">9. Contact Us</h2>
-            <p>
-                If you have any questions about these Terms of Service, please contact us at:
+                To resolve a complaint regarding the Site or to receive further information regarding use of the Site,
+                please contact us at:
             </p>
             <div
                 style="margin-top: 16px; background: var(--bg-secondary); padding: 24px; border-radius: 12px; border: 1px solid var(--glass-border);">
